style.css
body {
    background: white;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

h1 {

}

h2 {

}

h3 {

}

div {

}

.main {
    
}

.subsection {
    display: inline-block;
    width: 250px;
}

img.instrument {
    width: 250px;
}

